--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -1047,7 +1047,7 @@
 
                                                 <h:inputText id="launchInputTextFile"
                                                              onclick="#{rich:component('uploadingPopup')}.show(); return false;" 
-                                                             value="#{fileUploadBean.size}"/> 
+                                                             value=""/> 
                                                 <h:outputText />
 
                                                 <h:outputText value="Device" />                                            
@@ -1114,99 +1114,113 @@
                                          columns="2"
                                          width="100%">     
                                 <h:panelGrid>
-
-                                    <rich:dataTable id="testsSimplyTable" 
-                                                    value="#{appsBean.allTests}" 
-                                                    var="app">
-                                         <f:facet name="header">
-                                            <h:outputText value="TYPES" />
-                                        </f:facet> 
-                                        <rich:column>
-                                            <f:facet name="header">ID</f:facet>
-                                            <h:outputText value="#{app.idApp}" />
-                                        </rich:column>
-                                        <rich:column>
-                                            <f:facet name="header">Name</f:facet>
-                                            <h:outputText value="#{app.name}" />
-                                        </rich:column>
-                                        <rich:column>
-                                            <f:facet name="header">Date</f:facet>
-                                            <h:outputText value="#{app.instDate}" />
-                                        </rich:column>                                            
-                                        <rich:column>
-                                            <f:facet name="header">User</f:facet>
-                                            <h:outputText value="#{app.user.userName}" />
-                                        </rich:column>                                              
-                                    </rich:dataTable>
+                                    <a4j:region>
+                                        <rich:extendedDataTable id="testsSimplyTable" 
+                                                                value="#{appsBean.allTests}" 
+                                                                var="app"
+                                                                selection="#{extTableSelectionBean.selection}"
+                                                                selectionMode="single"
+                                                                frozenColumns="4"
+                                                                columnClasses="testCol,testCol,testCol,testCol"
+                                                                headerClass="testHeader">                                                                                
+                                            <a4j:ajax execute="@region" 
+                                                      event="selectionchange" 
+                                                      listener="#{extTableSelectionBean.selectionListener}"
+                                                      render=":testFormPanel"/>
+                                            <f:facet name="header">
+                                                <h:outputText value="TYPES" />
+                                            </f:facet> 
+                                            <rich:column id="idCol" width="40px">
+                                                <f:facet name="header" id="idHeader">ID</f:facet>
+                                                <h:outputText value="#{app.idApp}" />
+                                            </rich:column>
+                                            <rich:column id="nameCol" width="120px">
+                                                <f:facet name="header" id="nameHeader">Name</f:facet>
+                                                <h:outputText value="#{app.name}" />
+                                            </rich:column>
+                                            <rich:column id="dateCol" width="120px">
+                                                <f:facet name="header" id="dateHeader">Date</f:facet>
+                                                <h:outputText value="#{app.instDate}" />
+                                            </rich:column>                                            
+                                            <rich:column id="userCol" width="120px">
+                                                <f:facet name="header" id="userHeader">User</f:facet>
+                                                <h:outputText value="#{app.user.userName}" />
+                                            </rich:column>                                              
+                                        </rich:extendedDataTable>
+                                    </a4j:region>
                                     
-                                    <rich:panel>
+                                    <rich:panel id="testFormPanel">
                                         <f:facet name="header">
                                             <h:outputText value="FORM" />
                                         </f:facet>
-                                        <h:panelGrid id="launchingTestGrid" columns="2">   
+                                        <a4j:region id="testRegion">
+                                            <h:panelGroup rendered="#{extTableSelectionBean.selectionItem.name.equalsIgnoreCase('octaveTest')}"
+                                                          id="testGroup">
+                                                <h:panelGrid id="launchingTestGrid" columns="2">                                               
+                                                    <h:outputText value="Name"/>
+                                                    <h:inputText value="#{fileUploadBean.appName}"/>
 
-                                            <h:outputText value="Name"/>
-                                            <h:inputText value="#{fileUploadBean.appName}"/>
+                                                    <h:outputText value="Priority"/>
+                                                    <h:selectOneMenu value="#{fileUploadBean.priority}">    
+                                                        <f:selectItem noSelectionOption="true"/>
+                                                        <f:selectItem itemLabel="High" itemValue="high" />
+                                                        <f:selectItem itemLabel="Medium" itemValue="medium" />
+                                                        <f:selectItem itemLabel="Low" itemValue="low" />
+                                                    </h:selectOneMenu> 
 
-                                            <h:outputText value="Priority"/>
-                                            <h:selectOneMenu value="#{fileUploadBean.priority}">    
-                                                <f:selectItem noSelectionOption="true"/>
-                                                <f:selectItem itemLabel="High" itemValue="high" />
-                                                <f:selectItem itemLabel="Medium" itemValue="medium" />
-                                                <f:selectItem itemLabel="Low" itemValue="low" />
-                                            </h:selectOneMenu> 
+                                                    <h:outputText value="Start now?"/>
+                                                    <h:selectBooleanCheckbox value="#{fileUploadBean.startNow}" />
 
-                                            <h:outputText value="Start now?"/>
-                                            <h:selectBooleanCheckbox value="#{fileUploadBean.startNow}" />
+                                                    <h:outputText value="Script File"/>
+                                                    <h:inputText id="inputTextFile"
+                                                                 onclick="#{rich:component('uploadingPopup')}.show(); return false;" 
+                                                                 value="#{fileUploadBean.size>0?fileUploadBean.file.name:null}"/>
 
-                                            <h:outputText value="Script File"/>
-                                            <h:inputText id="inputTextFile"
-                                                         onclick="#{rich:component('uploadingPopup')}.show(); return false;" 
-                                                         value="#{fileUploadBean.size>0?fileUploadBean.file.name:null}"/>
+                                                    <h:outputText value="Device" />                                            
+                                                    <h:selectOneMenu value="#{fileUploadBean.device}">    
+                                                        <f:selectItem noSelectionOption="true"/>
+                                                        <f:selectItem itemLabel="Processor" itemValue="processor" />
+                                                        <f:selectItem itemLabel="GPU" itemValue="gpu" />
+                                                    </h:selectOneMenu> 
 
-                                            <h:outputText value="Device" />                                            
-                                            <h:selectOneMenu value="#{fileUploadBean.device}">    
-                                                <f:selectItem noSelectionOption="true"/>
-                                                <f:selectItem itemLabel="Processor" itemValue="processor" />
-                                                <f:selectItem itemLabel="GPU" itemValue="gpu" />
-                                            </h:selectOneMenu> 
+                                                    <h:outputText />
+                                                    <a4j:commandButton value="Submit"
+                                                                       action="#{fileUploadBean.launchTest('octave')}"
+                                                                       render="testsHistoryTable testGroup"
+                                                                       execute="@region"/>     
 
-                                            <h:outputText />
-                                            <a4j:commandButton value="Submit"
-                                                               action="#{fileUploadBean.launchTest('octave')}"
-                                                               render="generalTestPanel"
-                                                               execute="@form"/>     
-
-                                            <h:outputText />
-                                            <h:panelGrid id="resultTestPanel"
-                                                         rendered="#{fileUploadBean.result!=null}">
-                                               <h:panelGrid styleClass="centered" 
-                                                            bgcolor="#B8E4B8" 
-                                                            rendered="#{fileUploadBean.result.equalsIgnoreCase('OK')}"
-                                                            columns="2">
-                                                   <h:outputText value="#{fileUploadBean.message}"
-                                                                 styleClass="launchOK" />
-                                                   <a4j:commandLink render="resultTestPanel"
-                                                                    onclick="#{fileUploadBean.setResult(null)}"
-                                                                    execute="@none">
-                                                       X
-                                                   </a4j:commandLink>
-                                               </h:panelGrid>
-                                               <h:panelGrid styleClass="centered" 
-                                                            columnClasses="centered,centered"
-                                                            bgcolor="lightcoral" 
-                                                            rendered="#{fileUploadBean.result.equalsIgnoreCase('Error')}"
-                                                            columns="2">
-                                                   <h:outputText value="#{fileUploadBean.message}"
-                                                                 styleClass="launchError" />   
-                                                   <a4j:commandLink render="resultTestPanel"
-                                                                    onclick="#{fileUploadBean.setResult(null)}"
-                                                                    execute="@none">
-                                                       X
-                                                   </a4j:commandLink>
-                                               </h:panelGrid>                                                    
-                                           </h:panelGrid>                                            
-                                        </h:panelGrid>
+                                                    <h:outputText />
+                                                    <h:panelGrid id="resultTestPanel"
+                                                                 rendered="#{fileUploadBean.result!=null}">
+                                                       <h:panelGrid styleClass="centered" 
+                                                                    bgcolor="#B8E4B8" 
+                                                                    rendered="#{fileUploadBean.result.equalsIgnoreCase('OK')}"
+                                                                    columns="2">
+                                                           <h:outputText value="#{fileUploadBean.message}"
+                                                                         styleClass="launchOK" />
+                                                           <a4j:commandLink render="resultTestPanel"
+                                                                            onclick="#{fileUploadBean.setResult(null)}"
+                                                                            execute="@none">
+                                                               X
+                                                           </a4j:commandLink>
+                                                       </h:panelGrid>
+                                                       <h:panelGrid styleClass="centered" 
+                                                                    columnClasses="centered,centered"
+                                                                    bgcolor="lightcoral" 
+                                                                    rendered="#{fileUploadBean.result.equalsIgnoreCase('Error')}"
+                                                                    columns="2">
+                                                           <h:outputText value="#{fileUploadBean.message}"
+                                                                         styleClass="launchError" />   
+                                                           <a4j:commandLink render="resultTestPanel"
+                                                                            onclick="#{fileUploadBean.setResult(null)}"
+                                                                            execute="@none">
+                                                               X
+                                                           </a4j:commandLink>
+                                                       </h:panelGrid>                                                    
+                                                   </h:panelGrid>                                             
+                                                </h:panelGrid>
+                                            </h:panelGroup>
+                                        </a4j:region>
                                     </rich:panel>   
                                     
                                 </h:panelGrid>
