--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -4,14 +4,14 @@ To change this template, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
+<html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:rich="http://richfaces.org/rich"
       xmlns:a4j="http://richfaces.org/a4j"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
-    <body>
+    <h:body>
         <ui:composition>            
             <rich:panel id="headerPanel">  
                 <h:panelGrid columns="2">
@@ -38,5 +38,5 @@ and open the template in the editor.
                 </h:panelGrid>                        
             </rich:panel>            
         </ui:composition>
-    </body>
+    </h:body>
 </html>
