--- a/src/main/webapp/footer.xhtml
+++ b/src/main/webapp/footer.xhtml
@@ -4,11 +4,24 @@ To change this template, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"   
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:rich="http://richfaces.org/rich"
+      xmlns:a4j="http://richfaces.org/a4j"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
+    <h:body>
+        <ui:composition>                         
+             <rich:panel id="footerPanel">     
+                <h:panelGrid columns="3" columnClasses="footerleft,footercenter,footerright">
+                    <h:outputText value="v1.0" />
+                    <h:outputText value="&#169;Copyright" />
+                    <h:graphicImage library="img" 
+                                    name="logocediant.png" 
+                                    height="32px" />
+                </h:panelGrid>
+            </rich:panel>                                    
+        </ui:composition>	
+    </h:body>
 </html>
